<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="RtlSymmetry"
    android:baselineAligned="false">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_name_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_high"
        android:hint="@string/field_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_name_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="12"
            android:inputType="text"
            android:singleLine="true"
            tools:text="Имя поля"/>
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_high"
        android:checkedButton="@id/btn_radio_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_name_label">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btn_radio_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_txt"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btn_radio_int"
            android:layout_marginStart="@dimen/margin_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_int" />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btn_radio_real"
            android:layout_marginStart="@dimen/margin_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_real" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_ok"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ok_btn"
        android:textColor="@color/design_default_color_primary_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        android:textColor="@color/design_default_color_primary_variant"
        app:layout_constraintBottom_toBottomOf="@+id/btn_ok"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        app:layout_constraintTop_toTopOf="@+id/btn_ok" />
</androidx.constraintlayout.widget.ConstraintLayout>